--- a/static/css/attraction.scss
+++ b/static/css/attraction.scss
@@ -558,6 +558,13 @@ body{
 
                         }
                     }
+                    .orderMessage{
+                        margin-left: 20px;
+                        margin-top: 5px;
+                        font-size: 16px;
+                        font-weight: 700;
+                        display:none;
+                    }
                     .orderBtn{
                         margin-left: 20px;
                         margin-top: 25px;
