--- a/templates/base.html
+++ b/templates/base.html
@@ -7,71 +7,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <title>台北</title>
-    <link rel="stylesheet" href="../static/css/attraction.css">
+    <!-- <link rel="stylesheet" href="../static/css/attraction.css"> -->
     <link rel="stylesheet" href="../static/css/all.css">
-    <!-- <link rel="stylesheet" href="../static/css/index.css"> -->
+    <link rel="stylesheet" href="../static/css/index.css">
     <link rel="shortcut icon" href="#" />
     {% block css %}
     {% endblock %}
 </head>
 
 
-<body>
+<body class="body">
+    <section class="SignInSignOutReserve">
+        <div class="filmBackground"></div>
+        <div class="signinBlock">
+            <div class="signinBackground">
+                <div class="signinContent">
+                    <div class="signinTitle">登入會員帳號<i class="fa-solid fa-xmark signinClose"></i></div>
+                    <input class="signinEmail" type="email" name="" placeholder="輸入電子信箱" />
+                    <input class="signinPassword" type="password" name="" placeholder="輸入密碼" />
+                    <div class="signinBtn">登入帳戶</div>
+                    <div class="signinCreateAccount">還沒有帳戶？點此註冊</div>
+                    <div class="signinMessage">登入成功</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="registerBlock">
+            <div class="registerBackground">
+                <div class="registerContent" method="POST" action="/api/user">
+                    <div class="registerTitle">註冊會員帳號<i class="fa-solid fa-xmark registerClose"></i></div>
+                    <input class="registerName" type="text" name="registerName" placeholder="輸入姓名" />
+                    <input class="registerEmail" type="email" name="registerEmail" placeholder="輸入電子信箱" />
+                    <input class="registerPassword" type="password" name="registerPassword" placeholder="輸入密碼" />
+                    <div class="registerBtn">註冊新帳戶</div>   
+                    <div class="registerSignInTo">已經有帳戶了？點此登入</div>
+                    <div class="registerMessage">註冊失敗，點此重新註冊</div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
     <nav>
         <div>
-            <div class="leftBar">台北一日遊</div>
-            <div class="rightBar">
-                <p>預定行程</p>
+            <div class="nav-bar-left">
+                <p>台北一日遊</p>
+            </div>
+            <div class="nav-bar-right">
+                <p class="reserveJourney">預定行程</p>
                 <p class="SigninRegister">登入/註冊</p>
                 <p class="SignOut">登出</p>
             </div>
         </div>
     </nav>
-    <main>
-
-        <div class="filmBackground"></div>
-            <div class="signinBlock">
-                <div class="signinBackground">
-                    <div class="signinContent">
-                        <div class="signinTitle">登入會員帳號<i class="fa-solid fa-xmark signinClose"></i></div>
-                        <input class="signinEmail" type="text" name="" placeholder="輸入電子信箱" />
-                        <input class="signinPassword" type="password" name="" placeholder="輸入密碼" />
-                        <div class="signinBtn">登入帳戶</div>
-                        <div class="signinCreateAccount">還沒有帳戶？點此註冊</div>
-                        <div class="signinMessage">登入成功</div>
-                    </div>
-                </div>
-            </div>
-            <div class="registerBlock">
-                <div class="registerBackground">
-                    <div class="registerContent" method="POST" action="/api/user">
-                        <div class="registerTitle">註冊會員帳號<i class="fa-solid fa-xmark registerClose"></i></div>
-                        <input class="registerName" type="text" name="registerName" placeholder="輸入姓名" />
-                        <input class="registerEmail" type="text" name="registerEmail" placeholder="輸入電子信箱" />
-                        <input class="registerPassword" type="password" name="registerPassword" placeholder="輸入密碼" />
-                        <div class="registerBtn">註冊新帳戶</div>             
-                        <div class="registerSignInTo">已經有帳戶了？點此登入</div>
-                        <div class="registerMessage">註冊失敗，點此重新註冊</div>
-                    </div>
-                </div>
-            </div>
+    
         
-        {% block inmain %}
-        {% endblock %}
+    {% block inmain %}
+    {% endblock %}
 
+    <footer class="footerBefore">
+        <p>COPYRIGHT © 2021 台北一日遊</p>
+    </footer>
 
- 
-
-        
-    </main>
+    <footer class="footerAfter">
+        <p>COPYRIGHT © 2021 台北一日遊</p>
+    </footer>
 
     
 </body>
-
-<footer>
-    <p>COPYRIGHT © 2021 台北一日遊</p>
-</footer>
-
 
 
 
@@ -81,4 +84,5 @@
 {% block javascript %}
 {% endblock %}
 <script src="../static/user.js" defer></script>
+<script src="../static/BackToHome.js" defer></script>
 </html>
