finish the function of TapPay

--- a/static/css/attraction.scss
+++ b/static/css/attraction.scss
@@ -369,7 +369,7 @@ body{
                 height: 406px;
                 margin-top: 37px;
                 margin-left: 5px;
-                background-color: rgb(227, 190, 141);
+                // background-color: rgb(227, 190, 141);
                 position: relative;
                 
                 @include screen750(){
