add the function of checking data formal and integrity in booking page

--- a/templates/booking.html
+++ b/templates/booking.html
@@ -31,7 +31,7 @@
         <p>聯絡姓名：<input class="bookingName" type="text" placeholder="請輸入姓名"></p>
         <p>聯絡信箱：<input class="bookingEmail" type="text" placeholder="請輸入信箱"></p>
         <p>手機號碼：<input class="bookingCellphone" type="text" placeholder="請輸入手機號碼"></p>
-        <p class="bookingConnectionErrorMessage">聯絡資訊皆不可為空，請填寫完整後再按下確認</p>
+        <p class="bookingConnectionErrorMessage"></p>
         <div class="connectionNotice">請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</div>
     </section>
     <hr>
