--- a/static/css/thankyou.css
+++ b/static/css/thankyou.css
@@ -12,4 +12,19 @@ main .thankYouPage {
 main .thankYouPage div {
   text-align: center;
   margin-top: 5px;
+  color: #757575;
+}
+
+.footerBefore {
+  margin-top: 50px;
+  width: 100%;
+  height: 83vh;
+  background: #757575;
+}
+.footerBefore p {
+  color: #FFFFFF;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 104px;
+  text-align: center;
 }/*# sourceMappingURL=thankyou.css.map */
