--- a/static/css/thankyou.scss
+++ b/static/css/thankyou.scss
@@ -14,8 +14,27 @@ main{
         div{
             text-align: center;
             margin-top: 5px;
+            color:#757575;
             // background-color: blue;
         }
         
+    }
+}
+
+
+.footerBefore{
+    // display: none;
+    margin-top: 50px;
+    width: 100%;
+    height: 83vh;
+    background: #757575;
+
+    p{
+    color: #FFFFFF;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 104px;
+    text-align: center;
+
     }
 }
